--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-unused-imports": "^3.1.0",
     "postcss": "^8",
+    "sass": "^1.71.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
